Refactor document and chat retrieval methods to use toList() for improved readability